test/corpus/webvtt_block.txt
=======================
WebVTT file that starts without WEBVTT text
:error
=======================

WEBVTT


---

(source_file
  (webvtt_block (webvtt_keyword)))
=======================
WebVTT block with without the mandatory 2 line terminators
:error
=======================
WEBVTT

---

(source_file
  (webvtt_block (webvtt_keyword)))
=======================
WebVTT block with mandatory 2 line terminators
=======================
WEBVTT


---

(source_file
  (webvtt_block (webvtt_keyword)))

=======================
WebVTT block with more than 2 line terminators
=======================
WEBVTT




---

(source_file
  (webvtt_block (webvtt_keyword)))

=======================
WebVTT block misspelled (It should be WEBVTT)
:error
=======================

webvtt

---

(source_file
  (webvtt_block (webvtt_keyword)))

=======================
WebVTT block with space separated extra text
=======================
WEBVTT This is some extra text that should be ok


---

(source_file
  (webvtt_block
  (webvtt_keyword)
  (space_separator)
  (text_before_terminator)))

=======================
WebVTT block with tab separated extra text
=======================
WEBVTT	This is some tab separated text that should be ok


---

(source_file
  (webvtt_block
  (webvtt_keyword)
  (tab_separator)
  (text_before_terminator)))

